--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^25.1.1",
-    "@types/node": "^13.7.0",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "@ag-grid-community/core": "^22.1.1",
+    "@ag-grid-community/react": "22.1.2",
+    "@ag-grid-enterprise/all-modules": "22.1.2",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
+    "@types/jest": "25.1.1",
+    "@types/node": "13.7.0",
+    "@types/react": "16.9.19",
+    "@types/react-dom": "16.9.5",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-scripts": "3.3.1",
-    "typescript": "^3.7.5"
+    "typescript": "3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
