--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ag-grid-community/core": "^22.1.1",
+    "@ag-grid-community/core": "22.1.1",
     "@ag-grid-community/react": "22.1.2",
     "@ag-grid-enterprise/all-modules": "22.1.2",
     "@testing-library/jest-dom": "4.2.4",
@@ -13,10 +13,24 @@
     "@types/node": "13.7.0",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
+    "husky": "4.2.1",
+    "lint-staged": "10.0.7",
+    "prettier": "1.19.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scripts": "3.3.1",
     "typescript": "3.7.5"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
